--- a/Sunshine/app/src/main/res/values/strings.xml
+++ b/Sunshine/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh" translatable="false">Refresh</string>
+    <string name="OPEN_WEATHER_MAP_API_KEY">mynumber</string>
 
 </resources>
