--- a/Sunshine/app/src/main/res/values/strings.xml
+++ b/Sunshine/app/src/main/res/values/strings.xml
@@ -6,5 +6,11 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh" translatable="false">Refresh</string>
     <string name="OPEN_WEATHER_MAP_API_KEY">mynumber</string>
+    <string name="title_activity_detail">Details</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_key" translatable="false">location</string>
+    <string name="pref_location_default" translatable="false">94043</string>
 
 </resources>
