--- a/Sunshine/app/src/main/res/values/strings.xml
+++ b/Sunshine/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh" translatable="false">Refresh</string>
+    <string name="action_share" translatable="false">Share</string>
     <string name="OPEN_WEATHER_MAP_API_KEY">mynumber</string>
     <string name="title_activity_detail">Details</string>
     <string name="title_activity_settings">Settings</string>
